Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <footer class="center-me">
   <div>
-    <a href="www.linkedin.com/in/lonnie-cox-9b279bba">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/lonnie-cox-9b279bba">LinkedIn</a>
     <a href="https://github.com/tomagothi/">Github</a>
   </div>
   <p>&copy Lonnie Cox 2025</p>
