Fixed alignment of name

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </svg>
     </div>
     
-    <div class="my-name">
+    <div class="my-name center-me">
       <p>My name is Lonnie</p>
     </div>
 
