--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <section class="interests center-me">
     <h1>Other Interests</h1>
     <p>
-      Apart from other coding projects that I am persuing, such as creating video games with the Godot game engine and learning React.js, I play
+      Apart from other coding projects that I am pursuing, such as creating video games with the Godot game engine and learning React.js, I play
       in and run DnD 5E campaigns. I love going on cruises, with Royal Caribean being my current favorite cruise line, though I am about to go on
       a Disney cruise soon. If it isn't obvious, I also love dogs and have two of my own, an Australian Cattle Dog named Justice and a Shepherd mix
       named Snickers. I also have two cats name Tiberius and Khan.
